--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,18 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-.alert-container {}
+.alert-container .col-12 {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.site-wide-alert {
+    border-radius: 0;
+    margin-bottom: 0;
+    padding: 5px 15px;
+    background-color: #ffd44b;
+    border-color: #ffd44b;
+}
 
 .callout-container {
     height: 100vh;
@@ -36,8 +47,8 @@ body {
 /* block dividers */
 
 .block-divider {
-    width: 75px;
-    height: 5px;
+    width: 150px;
+    height: 2px;
     border: 0;
     
 }
@@ -48,6 +59,37 @@ body {
 
 .block-divider-short {
      width: 35px;
+}
+
+/* Navbar */
+
+.navalert-container {
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+    padding-left: 0;
+    padding-right: 0;
+    z-index: 1;
+}
+
+.navbar {
+    margin-bottom: 0;
+    border: 0;
+    width: 100%;
+    background-color: rgba(0,0,0,0.25);
+} 
+
+.navbar .navbar-toggler {
+    border: 0;
+}
+
+.navbar-brand {
+    font-weight: bold;
+}
+
+.navbar .navbar-nav a {
+    font-weight: bold;
 }
 
 /* Jumbotron */
@@ -84,4 +126,19 @@ body {
 .btn--red {
     color: white;
     background-color: #f05f40;
+}
+
+.btn--red:hover,
+.btn--red:active,
+.btn--red:focus,
+.btn--red:active:focus {
+    background-color: #d05940;
+    border-color: #f05f40;
+    color: white;
+}
+
+/* Mark */
+
+.mark-round {
+    border-radius: 5px;
 }
