--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,13 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+.container-wrapper {}
+
+.container-wrapper--red {
+    background-color: #f05f40;
+    color: white;
+}
+
 .alert-container .col-12 {
     padding-left: 0;
     padding-right: 0;
@@ -44,21 +51,53 @@ body {
 
 .features-container {}
 
-/* block dividers */
+/* Page header */
+
+.page-header {
+    margin-bottom: 0;
+    border-bottom: 0;
+    text-align: center;
+}
+
+.page-header h2 {
+    margin-top: 0;
+}
+
+.quotes .page-header {
+    margin-bottom: 25px;
+}
+
+
+/* Block dividers */
 
 .block-divider {
-    width: 150px;
+    width: 250px;
     height: 2px;
     border: 0;
-    
+    background-color: #444;
 }
 
 .block-divider--orange {
     background-color: #b1580b;
 }
 
-.block-divider-short {
-     width: 35px;
+.block-divider--white {
+    background-color: white;
+}
+
+.block-divider--short {
+     width: 125px;
+}
+
+/* Content containers */
+
+.content-container {
+    padding-top: 75px;
+    padding-bottom: 75px;
+}
+
+.content-container-feat {
+    margin: 0 5%; /* Not following the video */
 }
 
 /* Navbar */
@@ -141,4 +180,27 @@ body {
 
 .mark-round {
     border-radius: 5px;
+}
+
+/* Feature */
+
+.features {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.features i {
+    margin-bottom: 20px;
+    font-size: 45px;
+    line-height: 45px;
+}
+
+.features .btn {
+    background-color: white;
+    border-color: white;
+    border-radius: 15px;
+    min-width: 100px;
+    font-weight: bold;
+    margin-top: 10px;
+    color: #f05f40;
 }
